package edu.hitsz.prop;

public class BombProp extends baseprop {

    public BombProp(int locationX, int locationY, int speedX, int speedY) {
        super(locationX, locationY, speedX, speedY);
    }

    @Override
    public void effect() {
        System.out.println("Get a bomb !");
    }
}
